@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[mms] Send IMP MUA information to IMAP servers that support the ID extension.
 [mms] Send S/MIME encrypted data to multiple recipients in a single outgoing
       message.
 [mms] Sent-mail maillog entries are now linked to a viewable representation of
